<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addShift"
            android:icon="@drawable/ic_baseline_date_range_24"
            android:title="Roster" />

        <item
            android:id="@+id/navLeaveManager"
            android:icon="@drawable/ic_menu_leave"
            android:title="@string/meny_leave_request" />

        <item
            android:id="@+id/addUser"
            android:icon="@drawable/ic_person"
            android:title="@string/add_user" />

        <item
            android:id="@+id/navHelpManager"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/navLogOut"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_log_out" />

    </group>
</menu>