<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/dialog_background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_outline_sms_failed_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/disclaimer_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:scrollbars = "vertical"
            android:text="@string/declaimer_text_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#D5D4D4" />

        <TextView
            android:id="@+id/disclaimerMainText"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:scrollbars="vertical"
            android:text="@string/text_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="#D5D4D4" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white" />

        <RadioButton
            android:id="@+id/radioButtonDisclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/radio_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/confirmDisclaimerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm"
            />

    </LinearLayout>

</RelativeLayout>

</ScrollView>